--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,3 @@
-.navbar-container{
-    display: none;
-}
-
 * {
   padding: 0;
   margin: 0;
@@ -19,31 +15,48 @@
 }
 #welcome h1 {
   font-size: 55px;
-  margin-top: 3em;
+  margin-top: 2em;
 }
 .buttons {
-  margin-top: 15em;
+  padding-top: 10em;
 }
 .logIn,
 .signUp {
   background-color: teal;
   width: 90%;
   margin-top: 1em;
+  font-size: 18px;
   border-radius: 6px;
 }
 a {
   text-decoration: none;
   color: #fff;
 }
+a:hover {
+  text-decoration: none;
+  color: #fff;
+}
 
+#signUp {
+  text-align: center;
+  background-color: #EAEAEA;
+  color: teal;
+}
+.account {
+  background-color: teal;
+  color: #eaeaea;
+}
+.btnSignUp {
+  margin-bottom: 1em;
+}
 
 /*Queries*/
-/*@media (min-width: 992px) {
+@media (min-width: 992px) {
   #welcome h1 {
     margin-top: 1em;
   }
   .buttons {
     margin-top: 15em;
   }
-}*/
+}
 
